# stylish-nix

./: ChangeLog.md  stylish-nix.cabal
src/: Main.hs
tests/: lists.nix
