name:               stylish-nix
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.xyz
category:           Text
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >= 1.10

executable stylish-nix
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*, ansi-wl-pprint, data-fix, hnix, mtl, text
  default-language: Haskell2010
